docs: add documentations for update
